# libssh2_esp

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE  README.md  compat.h  component.mk  idf_component.yml  libssh2_config.h
examples/ssh2_exec/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/ssh2_exec/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  ssh2_exec.c
